# ico2img-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT.md  README.md
.github/workflows/: rust.yml
archlinux/: PKGBUILD
docs/: config.md
src/: main.rs
