[package]
name = "ico2img"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
ico = "0.3.0"
image = "0.25.1"
toml = "0.8.12"
