[package]
name = "ico2img"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/ico2img-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.38"
clap = { version = "4.4.18", features = ["derive"] }
ico = "0.3.0"
image = "0.25.1"
log = "0.4.22"
simple_logger = "5.0.0"
toml = "0.8.12"
