[package]
name = "ico2any"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["ico", "image", "converter", "cli"]
readme = "README.md"
repository = "https://github.com/walker84837/ico2any"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.38"
clap = { version = "4.6", features = ["derive"] }
ico = "0.5.0"
image = "0.25.1"
log = "0.4.22"
simple_logger = "5.0.0"
toml = "1.1"
